@@ -8,8 +8,8 @@
       <configuration active="true" name="MediaControlSkin">
          <device group="Java(TM) Platform Micro Edition SDK 3.0" name="DefaultCldcPhone2"/>
          <symbolSet name="MediaControlSkin">
-            <symbol name="MMAPI" value="1.1"/>
             <symbol name="screen.isColor" value="true"/>
+            <symbol name="MMAPI" value="1.1"/>
             <symbol name="screen.bitDepth" value="8"/>
             <symbol name="JSR82" value="1.1"/>
             <symbol name="JSR226" value="1.0"/>
@@ -18,8 +18,8 @@
             <symbol name="SATSA-PKI" value="1.0"/>
             <symbol name="CLDC" value="1.1"/>
             <symbol name="JSR179" value="1.0"/>
-            <symbol name="SATSA-JCRMI" value="1.0"/>
             <symbol name="WMA" value="2.0"/>
+            <symbol name="SATSA-JCRMI" value="1.0"/>
             <symbol name="J2ME-WS" value="1.0"/>
             <symbol name="screen.width" value="180"/>
             <symbol name="JSR238" value="1.0"/>
