@@ -1,5 +1,9 @@
 # MTJ Build Properties
-MediaControlSkin.includes=src/org/jvoicexml/jsapi2/AudioFormat.java\
+MediaControlSkin.includes=unittests/org/jvoicexml/jsapi2/synthesis/QueueManagerTest.java\
+,unittests/org/jvoicexml/jsapi2/test/synthesis/DummySpeakableListener.java\
+,unittests/org/jvoicexml/jsapi2/test/synthesis/DummySynthesizer.java\
+,unittests/org/jvoicexml/jsapi2/DummyAudioManager.java\
+,src/org/jvoicexml/jsapi2/AudioFormat.java\
 ,src/org/jvoicexml/jsapi2/BaseAudioManager.java\
 ,src/org/jvoicexml/jsapi2/BaseEngine.java\
 ,src/org/jvoicexml/jsapi2/BaseEngineProperties.java\
@@ -9,18 +13,16 @@ MediaControlSkin.includes=src/org/jvoicexml/jsapi2/AudioFormat.java\
 ,src/org/jvoicexml/jsapi2/TerminatableSpeechEventExecutor.java\
 ,src/org/jvoicexml/jsapi2/ThreadSpeechEventExecutor.java\
 ,src/org/jvoicexml/jsapi2/recognition/BaseGrammar.java\
+,src/org/jvoicexml/jsapi2/recognition/BaseRecognizer.java\
 ,src/org/jvoicexml/jsapi2/recognition/BaseRecognizerProperties.java\
+,src/org/jvoicexml/jsapi2/recognition/BaseResultToken.java\
+,src/org/jvoicexml/jsapi2/recognition/BaseSpeakerManager.java\
+,src/org/jvoicexml/jsapi2/recognition/GrammarDefinition.java\
+,src/org/jvoicexml/jsapi2/synthesis/BaseSpeakable.java\
 ,src/org/jvoicexml/jsapi2/synthesis/BaseSynthesizer.java\
 ,src/org/jvoicexml/jsapi2/synthesis/BaseSynthesizerProperties.java\
 ,src/org/jvoicexml/jsapi2/synthesis/QueueItem.java\
-,unittests/org/jvoicexml/jsapi2/synthesis/QueueManagerTest.java\
-,unittests/org/jvoicexml/jsapi2/test/synthesis/DummySpeakableListener.java\
-,unittests/org/jvoicexml/jsapi2/test/synthesis/DummySynthesizer.java\
-,unittests/org/jvoicexml/jsapi2/DummyAudioManager.java\
-,src/org/jvoicexml/jsapi2/recognition/BaseSpeakerManager.java\
-,src/org/jvoicexml/jsapi2/recognition/BaseResultToken.java\
-,src/org/jvoicexml/jsapi2/recognition/BaseRecognizer.java\
-,src/org/jvoicexml/jsapi2/recognition/GrammarDefinition.java\
+,src/org/jvoicexml/jsapi2/synthesis/QueueManager.java\
 ,src/org/jvoicexml/jsapi2/synthesis/BaseSpeakable.java\
 
 MediaControlSkin.excludes=\
